# zimsearch

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Contributing.md  INSTALL  INSTALL.md  Makefile.am  README  README.md  autogen.sh  br.com.dsboger.zimsearch-search-provider.ini  br.com.dsboger.zimsearch.desktop  br.com.dsboger.zimsearch.provider.service  configure.ac  install.sh  setup.cfg  setup.py  uninstall.sh  zim-gnomeshellsearch  zimsearch.py
data/: zim.plugins.gnomeshellsearch.provider.ini.in  zim.plugins.gnomeshellsearch.provider.service  zim.plugins.gnomeshellsearch.provider.service.in
src/: gnomeshellsearch.py
