
zimpluginsdir = $(pythondir)/zim/plugins/
zimplugins_PYTHON = src/gnomeshellsearch.py

dbusservicedir = $(datarootdir)/dbus-1/services/
dbusservice_DATA = data/zim.plugins.gnomeshellsearch.provider.service

shellsearchdir = $(datarootdir)/gnome-shell/search-providers/
shellsearch_DATA = data/zim.plugins.gnomeshellsearch.provider.ini
